browser/themes/winstripe/browser/browser-aero.css
%
define
WINSTRIPE_AERO
%
include
browser
.
css
%
undef
WINSTRIPE_AERO
%
define
customToolbarColor
rgb
(
227
237
246
)
media
all
and
(
-
moz
-
windows
-
default
-
theme
)
{
#
navigator
-
toolbox
>
toolbar
:
not
(
:
-
moz
-
lwtheme
)
{
background
-
color
:
customToolbarColor
;
}
.
tabbrowser
-
tab
[
selected
=
"
true
"
]
:
not
(
:
-
moz
-
lwtheme
)
{
background
-
image
:
-
moz
-
linear
-
gradient
(
rgba
(
255
255
255
.
7
)
toolbarHighlight
30
%
)
-
moz
-
linear
-
gradient
(
customToolbarColor
customToolbarColor
)
;
}
}
media
all
and
(
-
moz
-
windows
-
compositor
)
{
#
titlebar
-
buttonbox
{
display
:
none
;
}
#
main
-
window
:
not
(
:
-
moz
-
lwtheme
)
{
-
moz
-
appearance
:
-
moz
-
win
-
borderless
-
glass
;
background
:
transparent
;
}
#
main
-
window
:
not
(
:
-
moz
-
lwtheme
)
[
inFullscreen
=
"
true
"
]
{
-
moz
-
appearance
:
none
;
background
-
color
:
#
556
;
}
#
toolbar
-
menubar
:
not
(
:
-
moz
-
lwtheme
)
#
TabsToolbar
[
tabsontop
=
"
true
"
]
:
not
(
:
-
moz
-
lwtheme
)
#
navigator
-
toolbox
[
tabsontop
=
"
false
"
]
>
#
nav
-
bar
:
not
(
:
-
moz
-
lwtheme
)
#
nav
-
bar
+
#
customToolbars
+
#
PersonalToolbar
[
collapsed
=
"
true
"
]
+
#
TabsToolbar
[
tabsontop
=
"
false
"
]
:
last
-
child
:
not
(
:
-
moz
-
lwtheme
)
{
background
:
transparent
!
important
;
color
:
black
;
text
-
shadow
:
0
0
.
7em
white
0
0
.
7em
white
0
1px
0
rgba
(
255
255
255
.
4
)
;
}
#
navigator
-
toolbox
[
tabsontop
=
"
true
"
]
>
toolbar
:
not
(
#
toolbar
-
menubar
)
:
not
(
#
TabsToolbar
)
{
border
-
left
:
1px
solid
ThreeDShadow
;
border
-
right
:
1px
solid
ThreeDShadow
;
}
#
toolbar
-
menubar
:
not
(
[
autohide
=
"
true
"
]
)
#
TabsToolbar
[
tabsontop
=
"
true
"
]
#
navigator
-
toolbox
[
tabsontop
=
"
false
"
]
>
#
nav
-
bar
#
nav
-
bar
+
#
customToolbars
+
#
PersonalToolbar
[
collapsed
=
"
true
"
]
+
#
TabsToolbar
[
tabsontop
=
"
false
"
]
:
last
-
child
#
navigator
-
toolbox
>
toolbar
:
not
(
#
toolbar
-
menubar
)
:
-
moz
-
lwtheme
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
global
/
content
/
bindings
/
toolbar
.
xml
#
toolbar
-
drag
"
)
;
}
#
browser
:
not
(
:
-
moz
-
lwtheme
)
#
browser
-
bottombox
:
not
(
:
-
moz
-
lwtheme
)
{
background
-
color
:
-
moz
-
dialog
;
}
#
urlbar
.
searchbar
-
textbox
{
background
-
color
:
rgba
(
255
255
255
.
725
)
;
navbarTextboxCustomBorder
color
:
black
;
}
#
urlbar
:
hover
.
searchbar
-
textbox
:
hover
{
background
-
color
:
rgba
(
255
255
255
.
898
)
;
}
#
urlbar
[
focused
=
"
true
"
]
.
searchbar
-
textbox
[
focused
=
"
true
"
]
{
background
-
color
:
white
;
}
.
tabbrowser
-
tab
:
not
(
:
-
moz
-
lwtheme
)
:
not
(
[
selected
=
"
true
"
]
)
.
tabs
-
newtab
-
button
:
not
(
:
-
moz
-
lwtheme
)
{
background
-
image
:
-
moz
-
linear
-
gradient
(
hsla
(
0
0
%
100
%
.
4
)
hsla
(
0
0
%
75
%
.
4
)
50
%
)
;
text
-
shadow
:
0
1px
0
rgba
(
255
255
255
.
4
)
;
}
.
tabbrowser
-
tab
:
not
(
:
-
moz
-
lwtheme
)
:
not
(
[
selected
=
"
true
"
]
)
:
hover
.
tabs
-
newtab
-
button
:
not
(
:
-
moz
-
lwtheme
)
:
hover
{
background
-
image
:
-
moz
-
linear
-
gradient
(
hsla
(
0
0
%
100
%
.
6
)
hsla
(
0
0
%
75
%
.
6
)
50
%
)
;
}
#
allTabs
-
panel
#
ctrlTab
-
panel
{
background
:
transparent
;
-
moz
-
appearance
:
-
moz
-
win
-
glass
;
-
moz
-
border
-
radius
:
0
;
border
:
none
;
font
:
normal
1
.
2em
"
Segoe
UI
"
;
color
:
black
;
text
-
shadow
:
white
-
1px
-
1px
.
5em
white
-
1px
1px
.
5em
white
1px
1px
.
5em
white
1px
-
1px
.
5em
;
}
}
media
not
all
and
(
-
moz
-
windows
-
compositor
)
{
#
print
-
preview
-
toolbar
:
not
(
:
-
moz
-
lwtheme
)
{
-
moz
-
appearance
:
-
moz
-
win
-
browsertabbar
-
toolbox
;
}
}
media
all
and
(
-
moz
-
windows
-
default
-
theme
)
{
#
identity
-
popup
#
editBookmarkPanel
#
notification
-
popup
{
-
moz
-
appearance
:
tooltip
;
color
:
InfoText
;
}
#
identity
-
popup
-
container
{
-
moz
-
padding
-
start
:
6px
;
-
moz
-
padding
-
end
:
6px
;
}
#
sidebar
-
splitter
{
border
:
0
;
-
moz
-
border
-
end
:
1px
solid
#
A9B7C9
;
min
-
width
:
0
;
width
:
3px
;
background
-
color
:
transparent
;
-
moz
-
margin
-
start
:
-
3px
;
position
:
relative
;
z
-
index
:
10
;
}
}
#
window
-
controls
{
-
moz
-
box
-
align
:
start
;
}
#
minimize
-
button
#
restore
-
button
#
close
-
button
{
-
moz
-
appearance
:
none
;
border
-
style
:
none
;
margin
:
0
;
}
#
close
-
button
{
-
moz
-
image
-
region
:
rect
(
0
49px
16px
32px
)
;
}
#
close
-
button
:
hover
{
-
moz
-
image
-
region
:
rect
(
16px
49px
32px
32px
)
;
}
#
close
-
button
:
hover
:
active
{
-
moz
-
image
-
region
:
rect
(
32px
49px
48px
32px
)
;
}

